--- a/todoapp/public/index.html
+++ b/todoapp/public/index.html
@@ -13,6 +13,6 @@
       <section class="task-list"></section>
     </section>
   </div>
-  <script src="./Todoapp_files/app.js.다운로드"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
