vue.js를 활용해서 만들어보기

--- a/todoapp2/public/index.html
+++ b/todoapp2/public/index.html
@@ -5,12 +5,11 @@
 <title>Document</title>
 </head>
 <body>
-<section class="folder">
-	<h2>Folder List</h2>
-	<input type="text" class="folder-input" size="20" placeholder="폴더 이름을 입력해주세요">
-	<section class="folder-list"></section>
-	<section class="task-list"></section>
-</section>
+<div id="app">
+	<folder-list></folder-list>
+	<task-list></task-list>
+</div>
+<script src="https://unpkg.com/vue@2.6.6/dist/vue.min.js"></script>
 <script src="/js/app.js"></script>
 </body>
 </html>
